tests/codegen/fail/enum/derive_wrong_item.rs
use juniper::GraphQLEnum;

#[derive(GraphQLEnum)]
struct Test {}

fn main() {}
